trunk/Archive2/92/4abb772e12b659/output
main.cpp: In function 'int main()':
main.cpp:3:6: error: invalid type argument of unary '*' (have 'int')
     *b = 5;
      ^
main.cpp:2:10: warning: unused variable 'a' [-Wunused-variable]
     int* a, b;
          ^
