trunk/Archive2/92/4abb772e12b659/main.cpp
int main(){
    int* a, b;
    *b = 5;
}
